added a populateDisplay function to display the numbers pressed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="main">
       <div class="calculator">
-        <div id="screen">SCREEN</div>
+        <div id="screen"></div>
         <div class="gridBtns">
           <!-- first row -->
           <button id="clear">clear</button>
@@ -36,7 +36,7 @@
           <button id="btn-minus">-</button>
 
           <!-- fifth row -->
-          <button>.</button>
+          <button id="btn-dec">.</button>
           <button id="btn-0">0</button>
           <button id="btn-equal">=</button>
           <button id="btn-plus">+</button>
