--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
           <button id="delete">delete</button>
 
           <!-- second row -->
-          <button id="btn-7">7</button>
-          <button id="btn-8">8</button>
-          <button id="btn-9">9</button>
-          <button id="btn-divide">÷</button>
+          <button id="btn-num">7</button>
+          <button id="btn-num">8</button>
+          <button id="btn-num">9</button>
+          <button id="divide">÷</button>
 
           <!-- third row -->
-          <button id="btn-4">4</button>
-          <button id="btn-5">5</button>
-          <button id="btn-6">6</button>
-          <button id="btn-x">x</button>
+          <button id="btn-num">4</button>
+          <button id="btn-num">5</button>
+          <button id="btn-num">6</button>
+          <button id="multiply">x</button>
 
           <!-- fourth row -->
-          <button id="btn-1">1</button>
-          <button id="btn-2">2</button>
-          <button id="btn-3">3</button>
-          <button id="btn-minus">-</button>
+          <button id="btn-num">1</button>
+          <button id="btn-num">2</button>
+          <button id="btn-num">3</button>
+          <button id="minus">-</button>
 
           <!-- fifth row -->
           <button id="btn-dec">.</button>
-          <button id="btn-0">0</button>
-          <button id="btn-equal">=</button>
-          <button id="btn-plus">+</button>
+          <button id="btn-num">0</button>
+          <button id="equal">=</button>
+          <button id="plus">+</button>
         </div>
       </div>
     </div>
