--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button id="minus">-</button>
 
           <!-- fifth row -->
-          <button id="btn-dec">.</button>
+          <button id="btn-num">.</button>
           <button id="btn-num">0</button>
           <button id="equal">=</button>
           <button id="plus">+</button>
