--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="gridBtns">
           <!-- first row -->
           <button id="clear">clear</button>
-          <button id="delete">delete</button>
+          <button id="delete"></button>
 
           <!-- second row -->
           <button id="btn-num">7</button>
